--- a/src/layout/_markdown-style.scss
+++ b/src/layout/_markdown-style.scss
@@ -1,5 +1,66 @@
+$font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
+  sans-serif, Apple Color Emoji, Segoe UI Emoji;
+
 $content-max-width: 720px;
+$content-horizontal-padding: 15px;
 $content-image-max-height: 560px;
+
+$screen-sm-min: 576px;
+$screen-md-min: 768px;
+$screen-lg-min: 1080px;
+
+html {
+  --background-color: #ffffff;
+  --primary-text-color: #000;
+  --secondary-text-color: #9e9e9e;
+  --content-text-color: rgb(55, 53, 47);
+
+  --button-background-color: #f3f3f4;
+  --button-text-color: #363f47;
+
+  --tab-text-color: #6e6d7a;
+  --tab-hover-text-color: #0d0c22;
+  --tab-selected-background-color: rgba(13, 12, 34, 0.05);
+
+  --bio-link-icon-color: rgba(0, 0, 0, 0.54);
+  --about-link-icon-color: #a8a8a8;
+
+  --chip-background-color: #f3f3f4;
+  --link-text-color: rgb(55 53 47 / 70%);
+  --post-card-border-color: rgba(0, 0, 0, 0.12);
+
+  --markdown-table-even-cell-background-color: #f6f8fa;
+  --markdown-table-border-color: #dfe2e5;
+  --markdown-blockquote-border-color: #dfe2e5;
+  --markdown-border-color: #e1e4e8;
+}
+
+// dark mode colors
+html[data-theme="dark"] {
+  --background-color: #232326;
+  --primary-text-color: #e6e6e6;
+  --secondary-text-color: #768390;
+  --content-text-color: #e6e6e6;
+
+  --button-background-color: #444c56;
+  --button-text-color: #363f47;
+
+  --tab-text-color: #768390;
+  --tab-hover-text-color: #acbac7;
+  --tab-selected-background-color: #373e47;
+
+  --chip-background-color: #323a42;
+  --bio-link-icon-color: #e6e6e6;
+  --about-link-icon-color: #a8a8a8;
+
+  --link-text-color: #90b0ec;
+  --post-card-border-color: #363f47;
+
+  --markdown-table-even-cell-background-color: #2d333b;
+  --markdown-table-border-color: #444c56;
+  --markdown-blockquote-border-color: #4f5864;
+  --markdown-border-color: #e1e4e8;
+}
 
 .markdown .octicon {
   display: inline-block;
@@ -55,7 +116,7 @@ $content-image-max-height: 560px;
 .markdown h6:hover .anchor .octicon-link:before {
   width: 16px;
   height: 16px;
-  content: ' ';
+  content: " ";
   display: inline-block;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' version='1.1' width='16' height='16' aria-hidden='true'%3E%3Cpath fill-rule='evenodd' d='M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z'%3E%3C/path%3E%3C/svg%3E");
 }
@@ -64,6 +125,8 @@ $content-image-max-height: 560px;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   line-height: 1.5;
+  color: var(--content-text-color);
+  font-family: $font-family;
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
@@ -106,6 +169,7 @@ $content-image-max-height: 560px;
 .markdown pre {
   font-family: monospace, monospace;
   font-size: 1em;
+  text-shadow: none;
 }
 
 .markdown hr {
@@ -123,7 +187,7 @@ $content-image-max-height: 560px;
   overflow: visible;
 }
 
-.markdown [type='checkbox'] {
+.markdown [type="checkbox"] {
   box-sizing: border-box;
   padding: 0;
 }
@@ -165,7 +229,7 @@ $content-image-max-height: 560px;
 .markdown hr:after,
 .markdown hr:before {
   display: table;
-  content: '';
+  content: "";
 }
 
 .markdown hr:after {
@@ -251,7 +315,6 @@ $content-image-max-height: 560px;
 .markdown p {
   margin-top: 0;
   margin-bottom: 10px;
-  line-height: 200%;
 }
 
 .markdown blockquote {
@@ -293,9 +356,9 @@ $content-image-max-height: 560px;
   padding: 0.2em 0.4em;
 }
 
-.markdown :not(pre)>code.language-text {
+.markdown :not(pre) > code.language-text {
   background: rgba(135, 131, 120, 0.15);
-  color: #EB5757;
+  color: #eb5757;
   overflow-wrap: break-word;
 }
 
@@ -311,7 +374,7 @@ $content-image-max-height: 560px;
   appearance: none;
 }
 
-.markdown :checked+.radio-label {
+.markdown :checked + .radio-label {
   position: relative;
   z-index: 1;
   border-color: #0366d6;
@@ -466,7 +529,7 @@ $content-image-max-height: 560px;
 }
 
 .markdown .pl-c2:before {
-  content: '^M';
+  content: "^M";
 }
 
 .markdown .pl-sr .pl-cce {
@@ -627,18 +690,18 @@ $content-image-max-height: 560px;
 .markdown:after,
 .markdown:before {
   display: table;
-  content: '';
+  content: "";
 }
 
 .markdown:after {
   clear: both;
 }
 
-.markdown> :first-of-type {
+.markdown > :first-child {
   margin-top: 0 !important;
 }
 
-.markdown> :last-child {
+.markdown > :last-child {
   margin-bottom: 0 !important;
 }
 
@@ -660,7 +723,7 @@ $content-image-max-height: 560px;
 }
 
 .markdown hr {
-  height: 1px;
+  height: 0.25em;
   padding: 0;
   margin: 24px 0;
   background-color: var(--markdown-border-color);
@@ -670,19 +733,15 @@ $content-image-max-height: 560px;
 .markdown blockquote {
   padding: 0 1em;
   color: #6a737d;
-  border-left: 2px solid var(--markdown-blockquote-border-color);
+  border-left: 0.25em solid var(--markdown-blockquote-border-color);
 }
 
-.markdown blockquote> :first-of-type {
+.markdown blockquote > :first-child {
   margin-top: 0;
 }
 
-.markdown blockquote> :last-child {
+.markdown blockquote > :last-child {
   margin-bottom: 0;
-}
-
-.markdown em {
-  font-style: italic;
 }
 
 .markdown h1,
@@ -747,14 +806,13 @@ $content-image-max-height: 560px;
   display: list-item;
   word-wrap: break-all;
   text-align: -webkit-match-parent;
-  line-height: 200%;
 }
 
-.markdown li>p {
+.markdown li > p {
   margin-top: 16px;
 }
 
-.markdown li+li {
+.markdown li + li {
   margin-top: 0.25em;
 }
 
@@ -807,11 +865,11 @@ $content-image-max-height: 560px;
   background-color: transparent;
 }
 
-.markdown img[align='right'] {
+.markdown img[align="right"] {
   padding-left: 20px;
 }
 
-.markdown img[align='left'] {
+.markdown img[align="left"] {
   padding-right: 20px;
 }
 
@@ -827,7 +885,7 @@ $content-image-max-height: 560px;
   word-wrap: normal;
 }
 
-.markdown pre>code {
+.markdown pre > code {
   padding: 0;
   margin: 0;
   font-size: 100%;
@@ -940,62 +998,62 @@ $content-image-max-height: 560px;
   background: #ffea7f;
 }
 
-.markdown .tab-size[data-tab-size='1'] {
+.markdown .tab-size[data-tab-size="1"] {
   -moz-tab-size: 1;
   tab-size: 1;
 }
 
-.markdown .tab-size[data-tab-size='2'] {
+.markdown .tab-size[data-tab-size="2"] {
   -moz-tab-size: 2;
   tab-size: 2;
 }
 
-.markdown .tab-size[data-tab-size='3'] {
+.markdown .tab-size[data-tab-size="3"] {
   -moz-tab-size: 3;
   tab-size: 3;
 }
 
-.markdown .tab-size[data-tab-size='4'] {
+.markdown .tab-size[data-tab-size="4"] {
   -moz-tab-size: 4;
   tab-size: 4;
 }
 
-.markdown .tab-size[data-tab-size='5'] {
+.markdown .tab-size[data-tab-size="5"] {
   -moz-tab-size: 5;
   tab-size: 5;
 }
 
-.markdown .tab-size[data-tab-size='6'] {
+.markdown .tab-size[data-tab-size="6"] {
   -moz-tab-size: 6;
   tab-size: 6;
 }
 
-.markdown .tab-size[data-tab-size='7'] {
+.markdown .tab-size[data-tab-size="7"] {
   -moz-tab-size: 7;
   tab-size: 7;
 }
 
-.markdown .tab-size[data-tab-size='8'] {
+.markdown .tab-size[data-tab-size="8"] {
   -moz-tab-size: 8;
   tab-size: 8;
 }
 
-.markdown .tab-size[data-tab-size='9'] {
+.markdown .tab-size[data-tab-size="9"] {
   -moz-tab-size: 9;
   tab-size: 9;
 }
 
-.markdown .tab-size[data-tab-size='10'] {
+.markdown .tab-size[data-tab-size="10"] {
   -moz-tab-size: 10;
   tab-size: 10;
 }
 
-.markdown .tab-size[data-tab-size='11'] {
+.markdown .tab-size[data-tab-size="11"] {
   -moz-tab-size: 11;
   tab-size: 11;
 }
 
-.markdown .tab-size[data-tab-size='12'] {
+.markdown .tab-size[data-tab-size="12"] {
   -moz-tab-size: 12;
   tab-size: 12;
 }
@@ -1004,18 +1062,38 @@ $content-image-max-height: 560px;
   list-style-type: none;
 }
 
-.markdown .task-list-item+.task-list-item {
+.markdown .task-list-item + .task-list-item {
   margin-top: 3px;
 }
 
 .markdown .task-list-item input {
   margin: 0 0.2em 0.25em -1.6em;
   vertical-align: middle;
+  width: 16px;
+  height: 16px;
+  border: 2px solid var(--markdown-blockquote-border-color);
+}
+
+.markdown .task-list-item input:checked::after {
+  content: "\2713";
+  color: red;
+  font-size: 24px;
+  position: relative;
+  top: -16px;
+  left: -2px;
 }
 
 // added for toc
 .markdown .table-of-contents {
-  @media (max-width: 1400px) {
+  // &::before {
+  //   padding-left: 35px;
+  //   content: 'Table of Contents';
+  //   font-weight: 500;
+  //   font-size: 15px;
+  //   margin-bottom: 3px;
+  // }
+
+  @media (max-width: 1300px) {
     display: none;
   }
 
@@ -1027,7 +1105,6 @@ $content-image-max-height: 560px;
   position: fixed;
   top: 75px;
   right: 0px;
-  overflow-y: scroll;
 
   ul {
     cursor: pointer;
@@ -1035,8 +1112,10 @@ $content-image-max-height: 560px;
 
     li {
       a {
+        width: 100%;
         height: 30px;
-        color: #6a737d;
+        padding: 6px 2px;
+        color: var(--secondary-text-color);
         font-size: 14px;
         border-bottom: none;
       }
@@ -1053,11 +1132,11 @@ $content-image-max-height: 560px;
   display: flex !important;
   justify-content: center !important;
   width: 100% !important;
-  max-height: $content-image-max-height  !important;
+  max-height: $content-image-max-height !important;
 
   img {
     max-width: 100% !important;
-    max-height: $content-image-max-height  !important;
+    max-height: $content-image-max-height !important;
     width: auto !important;
     height: auto !important;
     position: relative !important;
@@ -1065,7 +1144,7 @@ $content-image-max-height: 560px;
 }
 
 // caption
-.markdown .gatsby-resp-image-wrapper+em {
+.markdown .gatsby-resp-image-wrapper + em {
   display: block;
   text-align: center;
   font-style: italic;
