--- a/src/layout/_markdown-style.scss
+++ b/src/layout/_markdown-style.scss
@@ -344,28 +344,28 @@ html[data-theme="dark"] {
   margin-left: 0;
 }
 
-.markdown code,
-.markdown pre {
-  font-family: SFMono-Regular, Consolas, Liberation Mono, Menlo, monospace;
-  font-size: 12px;
-}
+// .markdown code,
+// .markdown pre {
+//   font-family: SFMono-Regular, Consolas, Liberation Mono, Menlo, monospace;
+//   font-size: 12px;
+// }
 
-.markdown code.language-text {
-  border-radius: 3px;
-  font-size: 85%;
-  padding: 0.2em 0.4em;
-}
+// .markdown code.language-text {
+//   border-radius: 3px;
+//   font-size: 85%;
+//   padding: 0.2em 0.4em;
+// }
 
-.markdown :not(pre) > code.language-text {
-  background: rgba(135, 131, 120, 0.15);
-  color: #eb5757;
-  overflow-wrap: break-word;
-}
+// .markdown :not(pre) > code.language-text {
+//   background: rgba(135, 131, 120, 0.15);
+//   color: #eb5757;
+//   overflow-wrap: break-word;
+// }
 
-.markdown pre {
-  margin-top: 0;
-  margin-bottom: 0;
-}
+// .markdown pre {
+//   margin-top: 0;
+//   margin-bottom: 0;
+// }
 
 .markdown input::-webkit-inner-spin-button,
 .markdown input::-webkit-outer-spin-button {
@@ -873,58 +873,58 @@ html[data-theme="dark"] {
   padding-right: 20px;
 }
 
-.markdown code {
-  padding: 0.2em 0.4em;
-  margin: 0;
-  font-size: 85%;
-  background-color: rgba(27, 31, 35, 0.05);
-  border-radius: 3px;
-}
+// .markdown code {
+//   padding: 0.2em 0.4em;
+//   margin: 0;
+//   font-size: 85%;
+//   background-color: rgba(27, 31, 35, 0.05);
+//   border-radius: 3px;
+// }
 
-.markdown pre {
-  word-wrap: normal;
-}
+// .markdown pre {
+//   word-wrap: normal;
+// }
 
-.markdown pre > code {
-  padding: 0;
-  margin: 0;
-  font-size: 100%;
-  word-break: normal;
-  white-space: pre;
-  background: transparent;
-  border: 0;
-}
+// .markdown pre > code {
+//   padding: 0;
+//   margin: 0;
+//   font-size: 100%;
+//   word-break: normal;
+//   white-space: pre;
+//   background: transparent;
+//   border: 0;
+// }
 
-.markdown .highlight {
-  margin-bottom: 16px;
-}
+// .markdown .highlight {
+//   margin-bottom: 16px;
+// }
 
-.markdown .highlight pre {
-  margin-bottom: 0;
-  word-break: normal;
-}
+// .markdown .highlight pre {
+//   margin-bottom: 0;
+//   word-break: normal;
+// }
 
-.markdown .highlight pre,
-.markdown pre {
-  padding: 16px;
-  overflow: auto;
-  font-size: 85%;
-  line-height: 1.45;
-  background-color: #f6f8fa;
-  border-radius: 3px;
-}
+// .markdown .highlight pre,
+// .markdown pre {
+//   padding: 16px;
+//   overflow: auto;
+//   font-size: 85%;
+//   line-height: 1.45;
+//   background-color: #2d2d2d;
+//   border-radius: 3px;
+// }
 
-.markdown pre code {
-  display: inline;
-  max-width: auto;
-  padding: 0;
-  margin: 0;
-  overflow: visible;
-  line-height: inherit;
-  word-wrap: normal;
-  background-color: initial;
-  border: 0;
-}
+// .markdown pre code {
+//   display: inline;
+//   max-width: auto;
+//   padding: 0;
+//   margin: 0;
+//   overflow: visible;
+//   line-height: inherit;
+//   word-wrap: normal;
+//   background-color: initial;
+//   border: 0;
+// }
 
 .markdown .commit-tease-sha {
   display: inline-block;
