STYLE: 마크다운 체크박스 표시 스타일 변경

--- a/src/layout/_markdown-style.scss
+++ b/src/layout/_markdown-style.scss
@@ -1080,7 +1080,7 @@ html[data-theme="dark"] {
   font-size: 24px;
   position: relative;
   top: -16px;
-  left: -2px;
+  left: px;
 }
 
 // added for toc
