--- a/src/styles/_markdown-style.scss
+++ b/src/styles/_markdown-style.scss
@@ -274,7 +274,7 @@ html[data-theme="dark"] {
 }
 
 .markdown h1 {
-  font-size: 32px;
+  font-size: 3rem;
 }
 
 .markdown h1,
@@ -757,15 +757,16 @@ html[data-theme="dark"] {
 }
 
 .markdown h1 {
-  font-size: 2em;
+  font-size: 3em;
 }
 
 .markdown h2 {
-  font-size: 1.5em;
+  font-size: 2em;
+  font-weight: 700;
 }
 
 .markdown h3 {
-  font-size: 1.25em;
+  font-size: 1.5em;
 }
 
 .markdown h4 {
